--- a/ulohy/01/WA_11122023/index.html
+++ b/ulohy/01/WA_11122023/index.html
@@ -22,10 +22,12 @@
                         <span class="bar"></span>
                         <span class="bar"></span>
                     </div>
-
                     
+                </div> <div class="searchButton">
+                    <img src="969259_magnifier_search_seo_magnifying_zoom_icon.png" alt="search">
                 </div>
             </div>
+           
         </div>
     </header>
 
